--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,10 +1,12 @@
 .header {
     @include flex-item(column, nowrap);
+    max-width: 100%;
 
     &__pageinfo {
+        background-color: $dark-shade;
         width: 100%;
         height: 100%;
-        padding: 0px 20px;
+        padding: 20px 20px;
 
         @include flex-item(row, nowrap);
         justify-content: center;
@@ -14,13 +16,14 @@
     &__title {
         width: 100%;
         text-align: center;
-        padding-top: 15px;
         font-family: $font-emphasis;
         font-size: $font-size * 2.5;
+        color: $base-color;
     }
 
     &__link {
         text-decoration: none;
+        color: $base-color;
         font-size: $font-size * 1.25;
 
         &:hover {
@@ -28,7 +31,7 @@
         }
 
         &:link, &:visited {
-            color: $dark-shade;
+            color: $base-color;
         }
     }
 }
