--- a/src/styles/_page.scss
+++ b/src/styles/_page.scss
@@ -1,5 +1,6 @@
 .page {
     height: 100%;
+    max-width: 100%;
 
     display: grid;
     grid-template-rows: auto 1fr auto;
