--- a/src/styles/_todolist.scss
+++ b/src/styles/_todolist.scss
@@ -8,6 +8,7 @@
 
     &__add-todo {
         margin-top: 10px;
-        @include btn($light-accent-color)
+        @include btn($dark-shade);
+        color: $base-color;
     }
 }
